# sph-simulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COMPARISON_GUIDE.md  CONAN_MIGRATION.md  FIX_SUMMARY.md  LEGACY_CODE_REMOVAL_SUMMARY.md  Makefile  README.md  REORGANIZATION_BUILD_STATUS.md  TEST_COVERAGE_SUMMARY.md  TYPE_SAFETY_IMPLEMENTATION_SUMMARY.md  WORKFLOW_SCRIPTS_STATUS.md  conanbuildenv-debug-armv8.sh  conanfile.txt  conanrunenv-debug-armv8.sh  debug_2d_shock.sh  final_calc  final_calc.cpp  fix_all_getter_access.sh  fix_test_getter_access.sh  fix_test_includes.sh  flake.nix  result  run_smoothing_length_tests.sh  test_dimension  test_dimension_verification.cpp  test_gravity_variant.cpp  test_neighbor_impl.cpp  test_param_fix  test_param_fix.cpp  test_plugin_minimal.cpp  validation_test.json  verify_smoothing_length_config.cpp
include/: CMakeLists.txt  defines.hpp  exception.hpp  exhaustive_search.hpp  exhaustive_search.tpp  fluid_force.hpp  fluid_force.tpp  fluid_force.tpp.bak  gravity_force.hpp  gravity_force.tpp  logger.hpp  module.hpp  output.hpp  output.tpp  output.tpp.bak  parameters.hpp  pre_interaction.hpp  pre_interaction.tpp  solver.hpp  timestep.hpp  timestep.tpp
include/algorithms/limiters/: slope_limiter.hpp  van_leer_limiter.hpp
include/algorithms/riemann/: hll_solver.hpp  riemann_solver.hpp
include/algorithms/viscosity/: artificial_viscosity.hpp  monaghan_viscosity.hpp
include/core/: bhtree.hpp  bhtree.tpp  bhtree.tpp.bak  bhtree_2_5d.hpp  boundary_builder.hpp  boundary_config_helper.hpp  boundary_types.hpp  computational_parameters.hpp  cubic_spline.hpp  cubic_spline_2_5d.hpp  disph_parameters_builder.hpp  ghost_particle_coordinator.hpp  ghost_particle_coordinator.tpp  ghost_particle_manager.hpp  ghost_particle_manager.tpp  ghost_particle_manager.tpp.bak  ghost_particle_manager.tpp.bak2  gsph_parameters_builder.hpp  kernel_function.hpp  neighbor_collector.hpp  neighbor_search_config.hpp  neighbor_search_result.hpp  output_parameters.hpp  parameter_estimator.hpp  parameter_estimator.tpp  parameter_validator.hpp  parameter_validator.tpp  periodic.hpp  physics_parameters.hpp  plugin_loader.hpp  simulation.hpp  simulation.tpp  simulation.tpp.bak  simulation_2_5d.hpp  simulation_2_5d.tpp.bak  simulation_parameters.hpp  simulation_plugin.hpp  spatial_tree_coordinator.hpp  spatial_tree_coordinator.tpp  sph_algorithm_registry.hpp  (+7 more)
include/core/algorithms/: algorithm_tags.hpp  sph_algorithm_registry.hpp
include/core/boundaries/: boundary_builder.hpp  boundary_config_helper.hpp  boundary_types.hpp  ghost_particle_coordinator.hpp  ghost_particle_coordinator.tpp  ghost_particle_manager.hpp  periodic.hpp
include/core/kernels/: cubic_spline.hpp  cubic_spline_2_5d.hpp  kernel_function.hpp  wendland_kernel.hpp
include/core/neighbors/: neighbor_accessor.hpp  neighbor_concepts.hpp  particle_array_types.hpp
include/core/parameters/: computational_parameters.hpp  disph_parameters_builder.hpp  gsph_parameters_builder.hpp  output_parameters.hpp  parameter_estimator.hpp  parameter_estimator.tpp  parameter_validator.hpp  parameter_validator.tpp  physics_parameters.hpp  simulation_parameters.hpp  sph_parameters_builder_base.hpp  ssph_parameters_builder.hpp
include/core/particles/: sph_particle.hpp  (+2 more)
include/disph/: d_fluid_force.hpp  d_fluid_force.tpp  d_fluid_force.tpp.bak  d_pre_interaction.hpp  d_pre_interaction.tpp  d_pre_interaction.tpp.bak
include/gsph/: g_fluid_force.hpp  g_fluid_force.tpp  g_fluid_force.tpp.bak  g_pre_interaction.hpp  g_pre_interaction.tpp  g_pre_interaction.tpp.bak
include/utilities/: constants.hpp
src/: CMakeLists.txt  logger.cpp  main_1d.cpp  main_2d.cpp  main_3d.cpp  solver.cpp
src/core/: computational_parameters.cpp  disph_parameters_builder.cpp  gsph_parameters_builder.cpp  output_parameters.cpp  parameter_estimator.cpp  parameter_validator.cpp  physics_parameters.cpp  plugin_loader.cpp  simulation_parameters.cpp  simulation_templates.cpp  sph_algorithm_registry.cpp  sph_parameters_builder.cpp  sph_parameters_builder_base.cpp  ssph_parameters_builder.cpp
src/gsph/: CMakeLists.txt
tests/: CMakeLists.txt  COMPREHENSIVE_TEST_PLAN.md  README.md  bdd_helpers.hpp  ghost_particle_standalone_test.cpp  test_is_near_boundary.cpp  test_main.cpp
tests/algorithms/: CMakeLists.txt
tests/boundary/: CMakeLists.txt
tests/core/: CMakeLists.txt  algorithm_parameters_builder_test.cpp  bhtree_ghost_integration_test.cpp  bhtree_test.cpp  bhtree_test.cpp.bak  boundary_spacing_validation_test.cpp  csv_writer_test.cpp  dimension_system_test.cpp  dimension_system_test_simple.cpp  ghost_particle_boundary_edge_cases_test.cpp  ghost_particle_coordinator_test.cpp  ghost_particle_debug_test.cpp  ghost_particle_integration_test.cpp  ghost_particle_manager_test.cpp  ghost_particle_manager_test.cpp.bak2  ghost_particle_manager_test.cpp.bak3  ghost_particle_manager_test.cpp.bak4  ghost_particle_regression_test.cpp  kernel_function_test.cpp  kernel_function_test.cpp.bak  morris_1997_ghost_positioning_test.cpp  neighbor_search_test.cpp  output_coordinator_test.cpp  output_system_integration_test.cpp  parameter_builder_test.cpp  parameter_builder_test.cpp.bak  parameter_categories_test.cpp  parameter_categories_test.cpp.bak  parameter_validation_test.cpp  parameter_validation_test.cpp.bak  particle_initialization_test.cpp  particle_test.cpp  particle_test.cpp.bak  plugin_loader_test.cpp  plugin_loader_test.cpp.bak  protobuf_writer_test.cpp  solver_ghost_lifecycle_test.cpp  solver_plugin_test.cpp  solver_plugin_test.cpp.bak  spatial_tree_coordinator_test.cpp  (+7 more)
tests/helpers/: bdd_helpers.hpp
tests/integration/: CMakeLists.txt
tests/manual/: test_neighbor_impl  test_periodic_neighbors.cpp
tests/modules/: CMakeLists.txt
tests/numerical/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/regression/: CMakeLists.txt
tests/system/: README.md
tests/tree/: CMakeLists.txt  bhtree_test.cpp  bhtree_test.cpp.bak
tests/utilities/: CMakeLists.txt  vector_operations_test.cpp  vector_operations_test.cpp.bak
(+579 files in other folders)
