# Boundary condition tests

# Mirror boundary tests
# add_executable(mirror_boundary_test
#     mirror_boundary_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(mirror_boundary_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME MirrorBoundaryTest COMMAND mirror_boundary_test)

# Periodic boundary tests
# add_executable(periodic_boundary_test
#     periodic_boundary_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(periodic_boundary_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME PeriodicBoundaryTest COMMAND periodic_boundary_test)

# Mixed boundary tests
# add_executable(mixed_boundary_test
#     mixed_boundary_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(mixed_boundary_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME MixedBoundaryTest COMMAND mixed_boundary_test)

# Uncomment tests as they are implemented
