# Integration tests - end-to-end workflow tests

# Full initialization sequence test
# add_executable(full_initialization_test
#     full_initialization_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(full_initialization_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME FullInitializationTest COMMAND full_initialization_test)

# Uncomment tests as they are implemented
