# Numerical accuracy and validation tests

# Kernel accuracy tests
# add_executable(kernel_accuracy_test
#     kernel_accuracy_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(kernel_accuracy_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME KernelAccuracyTest COMMAND kernel_accuracy_test)

# Uncomment tests as they are implemented
