# Performance benchmarks and stress tests

# Large scale particle tests
# add_executable(large_scale_test
#     large_scale_test.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(large_scale_test
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME LargeScaleTest COMMAND large_scale_test)

# Uncomment tests as they are implemented
# Note: Performance tests may be excluded from default test runs
