# Regression tests for known bugs

# Ghost particle kernel radius bug regression test
# Documented in particle_initialization_test.cpp (core tests)

# Future regression tests will be added here
# add_executable(regression_test_name
#     regression_test_name.cpp
#     ${CMAKE_SOURCE_DIR}/tests/test_main.cpp
# )
# target_link_libraries(regression_test_name
#     PRIVATE
#         sph_lib
#         GTest::gtest
#         GTest::gtest_main
# )
# add_test(NAME RegressionTestName COMMAND regression_test_name)
